--- a/uhmarketplace/package.json
+++ b/uhmarketplace/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/msal-browser": "^3.26.1",
+    "@azure/msal-react": "^2.1.1",
+    "bootstrap": "^5.3.3",
+    "next": "14.2.15",
+    "next-auth": "^4.24.10",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.15"
+    "react-bootstrap": "^2.10.5",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "typescript": "^5"
   }
 }
