--- a/uhmarketplace/package.json
+++ b/uhmarketplace/package.json
@@ -15,9 +15,12 @@
     "@auth/prisma-adapter": "^2.7.2",
     "@azure/msal-browser": "^3.26.1",
     "@azure/msal-react": "^2.1.1",
+    "@prisma/client": "^5.21.1",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "next": "14.2.15",
-    "next-auth": "^4.24.10",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18"
@@ -29,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
