--- a/uhmarketplace/package.json
+++ b/uhmarketplace/package.json
@@ -19,11 +19,13 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.15",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.17.1",
