--- a/uhmarketplace/.env.example
+++ b/uhmarketplace/.env.example
@@ -4,7 +4,7 @@
 
 .ENV
 // https://www.mongodb.com/resources/products/fundamentals/mongodb-connection-string#:~:text=The%20MongoDB%20connection%20string%20for,port%20number%20you%20are%20using.
-DATABASE_URL="mongodb url will go here"
+DATABASE_URL="planetscaledb url will go here/other database url if we go with something else"
 
 .ENV.LOCAL
 // Generate a next auth secret by entering the following command into the terminal
