--- a/uhmarketplace/package.json
+++ b/uhmarketplace/package.json
@@ -20,7 +20,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.2.15",
+    "next": "^14.2.15",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
