--- a/uhmarketplace/package.json
+++ b/uhmarketplace/package.json
@@ -37,6 +37,7 @@
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
+    "resend": "^4.0.1-alpha.0",
     "uuid": "^11.0.2",
     "zod": "^3.23.8"
   },
