email verification complete

--- a/uhmarketplace/.env.example
+++ b/uhmarketplace/.env.example
@@ -3,10 +3,18 @@
 // .env and .env.local are two separate files
 
 .ENV
-// https://www.mongodb.com/resources/products/fundamentals/mongodb-connection-string#:~:text=The%20MongoDB%20connection%20string%20for,port%20number%20you%20are%20using.
-DATABASE_URL="planetscaledb url will go here/other database url if we go with something else"
+// The URL listed is for a local mySQL server. The planetscaledDB will be connected later as it is a paid service with no free tier to test with. 
+// https://www.youtube.com/watch?v=Cz3WcZLRaWc&t=300s fireship video on mySQL set up 
+DATABASE_URL="mysql://<USERNAME>:<PASSWORD>@localhost:3306/<DATABASE_NAME>"
 
 .ENV.LOCAL
 // Generate a next auth secret by entering the following command into the terminal
 // "openssl rand -base64 32"
 NEXTAUTH_SECRET= 
+// Also temporary for local testing. Normally, we open on port 3000 but it can change depending on what you have it open on. 
+NEXTAUTH_URL=http://localhost:3000
+// Resend API key goes here. It is free to use for testing but it will only
+// send to the email that created the account. So if you wanna test the UH account, sign up with that.
+// Everything is set-up but here is a link if anyone wants to see how it works https://resend.com/docs/send-with-nextjs
+RESEND_API_KEY=
+
