email verification complete

--- a/uhmarketplace/.env.example
+++ b/uhmarketplace/.env.example
@@ -10,5 +10,10 @@ DATABASE_URL="mysql://<USERNAME(default is root)>:<PASSWORD YOU CREATED>@localho
 // "openssl rand -base64 32"
 // Copy the value given by the command here to this variable below
 NEXTAUTH_SECRET= 
-// Leave this as is for now
-NEXTAUTH_URL=http://localhost:3000 
+// Also temporary for local testing. Normally, we open on port 3000 but it can change depending on what you have it open on. 
+NEXTAUTH_URL=http://localhost:3000
+// Resend API key goes here. It is free to use for testing but it will only
+// send to the email that created the account. So if you wanna test the UH account, sign up with that.
+// Everything is set-up but here is a link if anyone wants to see how it works https://resend.com/docs/send-with-nextjs
+RESEND_API_KEY=
+
