--- a/uhmarketplace/package.json
+++ b/uhmarketplace/package.json
@@ -15,10 +15,12 @@
     "@auth/prisma-adapter": "^2.7.2",
     "@azure/msal-browser": "^3.26.1",
     "@azure/msal-react": "^2.1.1",
+    "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.21.1",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.11.15",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.15",
     "next-auth": "^4.24.7",
