--- a/uhmarketplace/.env.example
+++ b/uhmarketplace/.env.example
@@ -3,10 +3,12 @@
 // .env and .env.local are two separate files
 
 .ENV
-// https://www.mongodb.com/resources/products/fundamentals/mongodb-connection-string#:~:text=The%20MongoDB%20connection%20string%20for,port%20number%20you%20are%20using.
-DATABASE_URL="planetscaledb url will go here/other database url if we go with something else"
-
+// replace the brackets with your user/pass for mySQL and the db you created (naming it coogbay is best tbh)
+DATABASE_URL="mysql://<USERNAME(default is root)>:<PASSWORD YOU CREATED>@localhost:3306/<DATABASE_NAME>"
 .ENV.LOCAL
-// Generate a next auth secret by entering the following command into the terminal
+// Generate a next auth secret by entering the following command into the terminal 
 // "openssl rand -base64 32"
+// Copy the value given by the command here to this variable below
 NEXTAUTH_SECRET= 
+// Leave this as is for now
+NEXTAUTH_URL=http://localhost:3000 
