--- a/uhmarketplace/package.json
+++ b/uhmarketplace/package.json
@@ -15,19 +15,19 @@
     "@auth/prisma-adapter": "^2.7.2",
     "@azure/msal-browser": "^3.26.1",
     "@azure/msal-react": "^2.1.1",
-    "@nextui-org/react": "^2.4.8",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.6",
+    "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.22.0",
+    "@react-email/components": "^0.0.28",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
-
-    "framer-motion": "^11.11.15",
     "express": "^4.21.1",
+    "framer-motion": "^11.11.15",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
     "mysql": "^2.18.1",
