--- a/uhmarketplace/package.json
+++ b/uhmarketplace/package.json
@@ -9,7 +9,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate && prisma migrate deploy"
+
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
