--- a/uhmarketplace/package.json
+++ b/uhmarketplace/package.json
@@ -11,7 +11,6 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate"
-
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -36,6 +35,7 @@
     "next": "14.2.15",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.16",
+    "prisma-extension-random": "^0.2.2",
     "react": "^18",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
